# IsaacSim_Booster

./: .gitignore  DEVELOPMENT_LOG.md  README.md
booster_robotics_sdk/example/high_level/: b1_loco_example_client.cpp
booster_stack/: booster-server-perception  booster-simulate-run.sh  booster-simulate-webots-run-debug.sh  booster-simulate-webots-run.sh  output.txt  readme.md
booster_stack/configs/: command_config.toml  common_graph_define.lua  common_graph_define_t1_rl_isaac.lua  common_module_options.lua  common_module_options_t1_rl_isaac.lua  config.lua  config.toml  config_isaac.lua  config_v23_isaac.toml  custom_traj.lua  joint_position_boxing.txt  joint_position_mg_cspeed_1to12.txt  t1.urdf  t1_7dof_arms.urdf
booster_stack/lib/: facedown_grav.pt  facedown_height.pt  facedown_joint.pt  faceup_grav.pt  faceup_height.pt  faceup_joint.pt  t1_fdr.pt
booster_stack/lib-usr-local/: liblcm.so.1  libqpOASES.so.3.2  librbdl.so.3.1.3  librbdl_urdfreader.so.3.1.3  libwbckits.so.0.1
booster_stack/lib-x86_64-linux-gnu/: libtinyxml2.so.9
booster_stack/utils/: config_utils.lua
package_extract_42/: fastdds_profile.xml  start_ros2_local_isaac_sim.sh
package_extract_42/booster_ros2/booster_msgs/: CMakeLists.txt
package_extract_42/booster_sim/booster_isaac/: booster_standalone_ros2_robocup_t1_7dof_arms_hand.py
package_extract_51/: readme.md  start_ros2_local_isaac_sim.sh
package_extract_51/booster_ros2/booster_msgs/: package.xml
package_extract_51/booster_sim/: README.md
package_extract_51/urdf/: V23RobotAsmSerial.urdf
(+80 files in other folders)
